<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITHome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lapin_topTextLeft">全部</string>
    <string name="lapin_topTextCenter">白菜价</string>
    <string name="lapin_topTextRight">福利</string>
    <!-- XListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 陈雅博频道管理 start -->
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">点击添加更多栏目</string>
    <string name="subscribe_manager_category_info">点击添加更多栏目</string>
    <string name="subscribe_manager_category_info_2">长按栏目排序或单击删除</string>
    <!-- 陈雅博频道管理 end -->

    <string name="login_im">立即登录</string>
    <string name="login_prompt">登录后体验更多精彩内容</string>
    <string name="gold_shop">金币商城</string>
    <string name="gold_task">金币任务</string>
    <string name="comment_manage">评论管理</string>
    <string name="post_manage">帖子管理</string>
    <string name="collection_my">我的收藏</string>
    <string name="offline_reading">离线阅读</string>
    <string name="theme">主题</string>
    <string name="setting">设置</string>
    <string name="recommend">推荐给朋友</string>
    <string name="ithome">关注IT之家</string>
    <string name="user_hint">邮箱/手机号</string>
    <string name="no_account">没有账号?</string>
    <string name="password">密码</string>
    <string name="forget_pad">忘记密码?</string>
    <string name="login">登录</string>
    <string name="fast_login">一键登录</string>
    <string name="weixin_login">微信登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="public_weixin">微信公众号</string>
    <string name="focusMe">加关注</string>
    <string name="theme_red">红色主题(默认)</string>
    <string name="theme_black">黑色主题</string>
    <string name="use">使用</string>
    <string name="using">使用中</string>
    <string name="news_post">新闻推送</string>
    <string name="equipment_show">显示设备小尾巴</string>
    <string name="update">自动探测更新</string>
    <string name="au_refresh">新闻列表自动刷新</string>
    <string name="wifi_on">非Wi-Fi网络不加载图片</string>
    <string name="people_buy">显示大家都在买</string>
    <string name="hide_top">自动隐藏顶部导航栏</string>
    <string name="text_size">文字大小</string>
    <string name="big">大</string>
    <string name="mid">中</string>
    <string name="small">小</string>
    <string name="nightModle">自动切换夜间模式</string>
    <string name="clearCache">清理缓存</string>
    <string name="checkUpdate">检查更新</string>
    <string name="opinion_back">意见反馈</string>
    <string name="about">关于</string>
    <string name="zeroK">0K</string>
    <string name="version">v3.22</string>
    <string name="comment_my">我的评论</string>
    <string name="my_post">我的帖子</string>
    <string name="my_Repost">我的回帖</string>
    <string name="reply_my">回复我的</string>
    <string name="change_pwd">修改密码</string>
    <string name="exit_account">退出账户</string>
    <string name="password_repet">重复密码</string>
    <string name="register">注册</string>
    <string name="set_head">设置头像</string>
    <string name="take_photo">拍照</string>
    <string name="photos">相册</string>
    <string name="cancel">取消</string>
    <string name="old_pwd">旧密码:</string>
    <string name="new_pwd">新密码:</string>
    <string name="qd_pwd">确定新密码:</string>
    <string name="qd">确定</string>
    

    <!-- 刘双杰 -->
    <string name="kejichangtan">科技畅谈</string>
    <string name="jikequan">极客圈</string>
    <string name="anzhuoquan">安卓圈</string>
    <string name="win10quan">Win10圈</string>
    <string name="win10phonequan">Win10手机圈</string>
    <string name="iosquan">iOS圈</string>
    <string name="ruanmeichanpin">软媒产品</string>
    <string name="zhanwuchuli">站务处理</string>
    <string name="hotTie">热帖</string>
    <string name="newRespons">最新回复</string>
    <string name="newFaBiao">最新发表</string>
    <string name="quanzi">圈子</string>
    <string name="quanzi_left">+0/43</string>
    <string name="clickRefresh">点击刷新按钮重新加载</string>
    <string name="loadFail">加载失败</string>
    <string name="remark">写评论</string>

    <!-- 刘双杰 -->

    <string name="faxintie">发新帖</string>
    <string name="fabiao">发表</string>
    <string name="edit_title">标题</string>
    <string name="edit_help">求助</string>
    <string name="edit_input">输入内容...</string>
    <string name="edit_phNum">手机号码</string>
    <string name="text_userHaiWai">海外用户？</string>
    <string name="edit_yanZhengNum">验证码</string>
    <string name="button_getYanZhengNum">获取验证码</string>
    <string name="yanZheng">验证</string>
    <string name="sousuo">搜索</string>
    <string name="wenzhang">文章</string>
    <string name="laPin">辣品</string>
    <string name="souSuoHistory">搜索历史</string>
    <string name="delete_record">清空记录</string>
    <!-- photoes -->
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <!--刘双杰  -->



</resources>