<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/popup_lin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@color/gray_heavy" 
        android:alpha="0.6"
        >
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_head"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/pupup_marginBottom"
        android:layout_marginTop="@dimen/pupup_marginTop"
        android:background="@color/gray_heavy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pupup_marginRight"
            android:background="@null"
            android:drawableTop="@drawable/head_cap_bg"
            android:gravity="center"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/btn_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/head_pto_bg"
            android:gravity="center"
            android:text="@string/photos" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/popup_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pupup_margin"
        android:background="@color/red"
        android:padding="@dimen/pupup_padding"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>