<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_sao"
            android:layout_width="@dimen/img_Hwidth"
            android:layout_height="@dimen/img_Hwidth"
            android:layout_marginLeft="@dimen/jianju_stytle3"
            android:src="@drawable/main_sao" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editText_sosuo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/jianju_stytle1"
                android:layout_marginRight="@dimen/jianju_stytle1"
                android:layout_marginBottom="@dimen/jianju_stytle1"
                android:background="@null"
                android:hint="@string/sousuo"
                android:textColor="@color/white"
                android:textSize="@dimen/wenzi_Style_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/jianju_stytleLine"
                android:layout_below="@id/editText_sosuo"
                android:background="@color/white" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_soso"
            android:layout_width="@dimen/img_Hwidth"
            android:layout_height="@dimen/img_Hwidth"
            android:layout_margin="@dimen/jianju_stytle1"
            android:src="@drawable/main_search" />
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <RadioGroup 
        android:id="@+id/sosuo_rg"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center">
        <RadioButton
        android:id="@+id/sosuorb_WenZhang"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/wenzhang"
        android:textColor="@color/black" 
        android:button="@null"
        android:background="@drawable/selector_rb_itcircle_kejichangtan_headleft"/>
    <RadioButton 
        android:id="@+id/sosuorb_laPin"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/laPin"
        android:textColor="@color/black" 
        android:button="@null"
        android:gravity="center"
        android:background="@drawable/selector_rb_itcircle_kejichangtan_headmiddle"/>
    <RadioButton 
        android:id="@+id/sosuorb_ItQuan"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/quanzi"
        android:textColor="@color/black" 
        android:button="@null"
        android:gravity="center"
        android:background="@drawable/selector_rb_itcircle_kejichangtan_headright"/>
    </RadioGroup>
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/jianju_stytleLine"
        android:background="@color/gray"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView 
            android:id="@+id/search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/souSuoHistory"
            android:layout_marginLeft="@dimen/jianju_stytle1"
            android:drawableLeft="@drawable/main_search_history"
            android:drawablePadding="@dimen/jianju_stytle2"
            android:textColor="@color/gray_heavy"/>
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_record"
            android:layout_marginRight="@dimen/jianju_stytle1"
            android:drawableLeft="@drawable/main_search_clear"
            android:drawablePadding="@dimen/jianju_stytle2"
            android:textColor="@color/red"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/jianju_stytleLine"
        android:background="@color/gray"/>

</LinearLayout>